chore: update packages

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,8 @@ head
 
 body 
   header Index
+  img(src=require('~Images/image.png'))
+  img(src=require('../assets/img/image.png'))
 
   -
     const responsivePict = require('~Images/image.png?sizes[]=480,sizes[]=640,sizes[]=800,sizes[]=1024&format=webp');
