fix: webpack config for spit chunks

--- a/src/html/layout/header.pug
+++ b/src/html/layout/header.pug
@@ -1,2 +1,4 @@
 header
   img(src=require('~Images/image.png'))
+  //- HERE was wrong relative path ../assets --> ../../assets
+  img(src=require('../../assets/img/image.png'))
