--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,37 +1,29 @@
-//- extends ../templates/wrapper.pug
-head
-  link(rel="stylesheet", href=require('~Styles/styles.scss'))
+include mixin-my-picture.pug
 
-body 
-  header Index
-  img(src=require('~Images/image.png'))
-  img(src=require('../assets/img/image.png'))
+doctype html5
+html
+  head
+    link(rel="stylesheet", href=require('/styles/styles.scss'))
 
-  -
-    const responsivePict = require('~Images/image.png?sizes[]=480,sizes[]=640,sizes[]=800,sizes[]=1024&format=webp');
-    const responsiveImage = {
-      srcSet: require('~Images/image.png?sizes[]=480,sizes[]=640,sizes[]=800,sizes[]=1024&format=jpg'),
-      src: require('~Images/image.png?format=jpg'),
-      width: require('~Images/image.png?prop=width&format=jpg'),
-      height: require('~Images/image.png?prop=height&format=jpg'),
-    };
-    //- const responsiveImage = {
-    //-   // use default image size
-    //-   src: require('~Images/image.png?size=1920'),
-    //-   srcSet: require('~Images/image.png?sizes[]=480,sizes[]=640,sizes[]=800,sizes[]=1024,sizes[]=1450,sizes[]=1920&format=png'),
-    //-   placeholder: require('~Images/image.png?prop=placeholder&placeholder=true&placeholderSize=100'),
-    //- }
+  body
+    h1 doctype html5 - outer mixin doesn't generate slash for self closing tags: &lt;img <b>/<b>&gt;, &lt;link <b>/<b>&gt;, ..
 
-  picture
-    source(
-      srcSet=responsivePict.srcSet
-      type='image/webp'
-    )
-    img(
-      src=responsiveImage.src
-      srcSet=responsiveImage.srcSet
-      width=responsiveImage.width
-      height=responsiveImage.height
-    )
+    h2 picture + img - mixin
+    h3 doesn't work
+    +my-picture
 
-  script(src=require('~Scripts/main.js'))
+    hr
+
+    h2 picture + img - not mixin
+    h3 works
+    picture
+      source(
+        srcset=require(`/assets/img/image.png`)
+        type='image/png'
+      )
+      img(
+        src=require(`/assets/img/image.jpeg`)
+        alt=''
+      )
+
+    script(src=require('~Scripts/main.js'))
